# ganache

./: cabal.project  flake.nix  ganache.cabal
examples/: 2.ach  3.ach  4.ach  5.ach  6.ach  7.ach  8.ach  9.ach  README.md
exe/: Main.hs  Options.hs
lib/: Ganache.hs
lib/Ganache/: Data.hs  Parse.hs  Print.hs  Spec.hs
lib/Ganache/Class/: FromAch.hs  Parse.hs  Print.hs  ToAch.hs
lib/Ganache/Data/: AchAddendaRecord.hs  AchBatch.hs  AchBatchControlRecord.hs  AchBatchHeaderRecord.hs  AchBatchRecord.hs  AchEntryDetailRecord.hs  AchFile.hs  AchFileControlRecord.hs  AchFileHeaderRecord.hs  AchFilePaddingRecord.hs  AchRecord.hs
nix/overlays/: haskell-packages.nix
scripts/: ghcid
src/: Ganache.hs  Main.hs
test/: GanacheTest.hs
