cabal-version: 3.6

name:        ganache
version:     0.0.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/ganache
license:     ISC
copyright:   2024 Evan Relf

common common
  build-depends:
    , base
  default-language: GHC2021
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DerivingStrategies
    , DerivingVia
    , LambdaCase
    , NoFieldSelectors
    , OverloadedRecordDot
    , OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common relude
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-extensions: OverloadedStrings

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: lib
  build-depends:
    , bytestring
    , flatparse
    , megaparsec
  exposed-modules:
    , Ganache
    , Ganache.Class.FromAch
    , Ganache.Class.ToAch
    , Ganache.Data
    , Ganache.Data.AchAddendaRecord
    , Ganache.Data.AchBatch
    , Ganache.Data.AchBatchControlRecord
    , Ganache.Data.AchBatchHeaderRecord
    , Ganache.Data.AchBatchRecord
    , Ganache.Data.AchEntryDetailRecord
    , Ganache.Data.AchFile
    , Ganache.Data.AchFileControlRecord
    , Ganache.Data.AchFileHeaderRecord
    , Ganache.Data.AchFilePaddingRecord
    , Ganache.Data.AchRecord

executable ganache
  import:
    , common
    , executable
    , relude
  hs-source-dirs: exe
  main-is: Main.hs
  build-depends:
    , bytestring
    , flatparse
    , ganache
    , megaparsec
    , optparse-applicative
    , pretty-simple
  other-modules:
    , Options

test-suite test
  import:
    , common
    , executable
    , relude
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  hs-source-dirs: test
  build-depends:
    , bytestring
    , filepath
    , flatparse
    , ganache
    , megaparsec
    , safe-exceptions
    , streamly-core
    , tasty
    , tasty-discover
    , tasty-expected-failure
    , tasty-hunit
    , unliftio
  other-modules:
    , GanacheTest

benchmark bench
  import:
    , common
    , executable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  build-depends:
    , tasty-bench
  ghc-options:
    -fproc-alignment=64
    -with-rtsopts=-A32m
